lintian-brush (0.95) UNRELEASED; urgency=medium

  * Use rules module from debmutate.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 30 Jan 2021 16:37:49 +0000

lintian-brush (0.94) unstable; urgency=medium

  * debhelper-but-no-misc-depends: Also handle debhelper-compat.
  * Strip superfluous commas.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 27 Jan 2021 00:36:32 +0000

lintian-brush (0.93) unstable; urgency=medium

  * Improve locking for bzr branches.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 20 Jan 2021 21:55:38 +0000

lintian-brush (0.92) unstable; urgency=medium

  * Handle multiple instances of Reference: field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 05 Jan 2021 22:22:44 +0000

lintian-brush (0.91) unstable; urgency=medium

  * Bump minimum version of debmutate.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 04 Jan 2021 15:49:19 +0000

lintian-brush (0.90) unstable; urgency=medium

  * Fix use of deb-scrub-obsolete, and add test. Closes: #978982

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 01 Jan 2021 17:58:57 +0000

lintian-brush (0.89) unstable; urgency=medium

  * Add dependency on newer lintian - required for successful test runs.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 13 Dec 2020 20:02:09 +0000

lintian-brush (0.88) unstable; urgency=medium

  * Add fixer for public-upstream-key-in-native-package.
  * Add fixers for setting pgpsigurlmangle and creating
    debian/upstream/signing-key.asc. This effectively does TOFY -
    it'll at least allow catching of changes in the signing key in the future.
    Disabled for the moment, until watch file support in debmutate stabilizes.
  * Update tag names to match lintian. Closes: #976503

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 06 Dec 2020 21:04:32 +0000

lintian-brush (0.87) unstable; urgency=medium

  * Cope with empty watch files. Closes: #974958
  * Add fixer for malformed-override.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 19 Nov 2020 00:19:01 +0000
