@@ -1,6 +1,8 @@
 lintian-brush (0.95) UNRELEASED; urgency=medium
 
   * Use rules module from debmutate.
+  * deb-scrub-obsolete: don't edit build dependencies for cdbs packages.
+    Closes: #981528
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 30 Jan 2021 16:37:49 +0000
 
